java version was changed